--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightningdevkit",
-  "version": "0.0.104.1alpha4",
+  "version": "0.0.106.0beta1",
   "description": "Lightning Development Kit",
   "main": "index.mjs",
   "types": "index.d.mts",
