--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,6 +95,7 @@ jobs:
           kill $SERVER_PID
       - name: Check latest TS files are in git
         run: |
+          git checkout ts/package.json
           git diff --exit-code
 
   java_bindings:
