[TS] Explicitly include `index.d.mts` (and `.mjs`) in package
As apparently npm doesn't include it just because its listed in
`types`.

--- a/ts/package.json
+++ b/ts/package.json
@@ -15,6 +15,8 @@
     "enums/*.d.mts",
     "bindings.mjs",
     "bindings.d.mts",
+    "index.mjs",
+    "index.d.mts",
     "version.mjs",
     "liblightningjs.wasm",
     "tsconfig.json",
