--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -266,6 +266,9 @@ jobs:
           chmod +x ./rustup.sh
           ./rustup.sh -y
           . $HOME/.cargo/env
+          # Temporarily use 1.67.1 to fix https://github.com/rust-lang/rust/issues/108943
+          rustup install 1.67.1
+          rustup default 1.67.1
           rustup target add armv7-linux-androideabi
           rustup target add aarch64-linux-android
           rustup target add i686-linux-android
