--- a/javatester/pom.xml
+++ b/javatester/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.bitcoinj</groupId>
             <artifactId>bitcoinj-core</artifactId>
-            <version>0.15.10</version>
+            <version>0.17-alpha1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
